--- a/my-timer/package.json
+++ b/my-timer/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "5.0.0",
     "redux-observable": "^2.0.0",
     "rxjs": "^7.5.2",
+    "rxjs-operators": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
